--- a/climy/styles/Home.module.css
+++ b/climy/styles/Home.module.css
@@ -1,4 +1,18 @@
 .container {
-  width: 100%;
-  height: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.main {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #888; 
+  overflow: hidden;
 }
